@@ -22,6 +22,7 @@
 - added <set-srcdir> for setting SRCDIR variable; it cannot be done manually
   anymore (Francesco Montorsi)
 - fixed dependencies handling in bakefile_gen if fileList() is used
+- autoconf: compatible with autoconf-2.60
 
 
 Version 0.2.0
